changed build folder path

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,24 +11,24 @@ pool:
 
 steps:
   - checkout: self
-    path: $(function_app_name)
+    path: /src/$(function_app_name)
   - task: NodeTool@0 
     inputs:
       versionSpec: $(node_version)
 
   # Install dev dependencies
   - script: npm install
-    workingDirectory: '$(System.DefaultWorkingDirectory)/src/$(function_app_name)'
+    # workingDirectory: '$(System.DefaultWorkingDirectory)/src/$(function_app_name)'
     displayName: "Install linting, test and coverage dependencies"
 
   # Perform linting using eslint  
   - script: npm run-script lint
-    workingDirectory: '$(System.DefaultWorkingDirectory)/src/$(function_app_name)'
+    # workingDirectory: '$(System.DefaultWorkingDirectory)/src/$(function_app_name)'
     displayName: "Run code linting"
 
   # Execute unit tests
   - script: npm run-script test-ci
-    workingDirectory: '$(System.DefaultWorkingDirectory)/src/$(function_app_name)'
+    # workingDirectory: '$(System.DefaultWorkingDirectory)/src/$(function_app_name)'
     displayName: "Execute unit tests"
     continueOnError: true
 
@@ -44,7 +44,7 @@ steps:
     displayName: 'Publish unit test report'
 
   - script: npm run-script coverage-ci
-    workingDirectory: '$(System.DefaultWorkingDirectory)/src/$(function_app_name)'
+    # workingDirectory: '$(System.DefaultWorkingDirectory)/src/$(function_app_name)'
     displayName: "Calculate Code Coverage"
 
   # Publish code coverage results
@@ -64,7 +64,7 @@ steps:
 
   # Prune dev dependencies
   - script: npm prune --production
-    workingDirectory: '$(System.DefaultWorkingDirectory)/src/$(function_app_name)'
+    # workingDirectory: '$(System.DefaultWorkingDirectory)/src/$(function_app_name)'
     displayName: "Prune dev dependencies"
 
   - task: ArchiveFiles@2
