--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ pool:
 
 steps:
   - checkout: self
-    path: /src/$(function_app_name)
+    path: src/$(function_app_name)
   - task: NodeTool@0 
     inputs:
       versionSpec: $(node_version)
