--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -70,7 +70,7 @@ steps:
   - task: ArchiveFiles@2
     displayName: "Archive files"
     inputs:
-      # rootFolderOrFile: "$(function_app_name)"
+      rootFolderOrFile: "$(System.DefaultWorkingDirectory)"
       includeRootFolder: false
       archiveFile: '$(System.DefaultWorkingDirectory)/build$(Build.BuildId).zip'
 
